--- a/package.json
+++ b/package.json
@@ -20,9 +20,16 @@
     "@vue/cli-service": "~4.5.0",
     "axios": "^0.21.1",
     "babel-eslint": "^10.1.0",
+    "element-ui": "^2.15.1",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "jsonp": "^0.2.1",
+    "node-sass": "^5.0.0",
+    "sass-loader": "^11.0.1",
+    "vue-awesome-swiper": "^4.1.1",
+    "vue-axios": "^3.2.4",
+    "vue-cookie": "^1.1.4",
+    "vue-lazyload": "^1.3.3",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
